--- a/Teoria/Jupiter_prueba.ipynb
+++ b/Teoria/Jupiter_prueba.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Texto añadido desde la rama Main"
+   ]
   }
  ],
  "metadata": {
