--- a/Teoria/inicio_git.ipynb
+++ b/Teoria/inicio_git.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "source": [
     "1. Asignamos un nombre a nuestro repositorio.\n",
-    "2. Asignamos si el repositorio en Público o Privado.\n",
+    "2. Asignamos si el repositorio es Público o Privado.\n",
     "3. ¡IMPORTANTE!! Siempre añadir un \"README.md\".\n",
     "4. Creamos el repositorio."
    ]
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Seleccionas una carpeta que esté vacia para tu espacio de trabajo."
+    "* Seleccionamos una carpeta que esté vacía para tu espacio de trabajo."
    ]
   },
   {
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En VSC, click derecho y selecionais la opcion de \"Abrir en terminal integrado\"."
+    "* En VSC, click derecho y seleccionamos la opción de \"Abrir en terminal integrado\"."
    ]
   },
   {
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para añadir información desde terminal, accedemos a la terminal integrado como en el paso anterior.\n",
+    "Para añadir información desde terminal, accedemos a la terminal integrada como en el paso anterior.\n",
     "\n",
     "1. **Add**:\n",
     "\n",
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para comprobar que archivos estan seleccionados, ejecutamos el siguiente comando: **\"git status\"**."
+    "Para comprobar qué archivos están seleccionados, ejecutamos el siguiente comando: **\"git status\"**."
    ]
   },
   {
@@ -385,14 +385,14 @@
    "metadata": {},
    "source": [
     "<a id=\"5\"></a> <br>\n",
-    "#### - Utilización y creación de ramas (branch)"
+    "## - Utilización y creación de ramas (branch)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* ¿Que es una rama?"
+    "* ### ¿Que es una rama?"
    ]
   },
   {
@@ -420,114 +420,109 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por terminal podemos utilizar los comandos siguientes para crear, listar y eliminar una branch en local.  \n",
-    "- Con el siguiente comando creamos una branch en nuestro ordenador de manera local. \n",
+    "Por terminal podemos utilizar los siguientes comandos para crear, listar y eliminar una branch en local.  \n",
+    "- Con el siguiente comando creamos una branch en nuestro ordenador de manera local.\n",
     "\n",
-    "git branch nombre-de-tu-branch  \n",
+    "**git branch nombre-de-tu-branch**  \n",
+    "\n",
+    "![crear_branch](../img/crear_branch.png)\n",
     "\n",
     "- Con el siguiente comando vemos las ramas que tenemos actualmente en el repositorio. \n",
     "\n",
-    "git branch --list \n",
+    "**git branch --list** \n",
+    "\n",
+    "![list_branch](../img/list_branch.png)\n",
     " \n",
     "- Con el siguiente comando nos moveremos a la branch que has creado para poder trabajar en ella. \n",
     "\n",
-    "git checkout nombre-de-tu-branch que has creado anteriormente>\n",
+    "**git checkout nombre-de-tu-branch que has creado anteriormente>**\n",
+    "\n",
+    "![entrar_branch](../img/entrar_branch.png)\n",
     "\n",
     "- Con el siguiente comando podremos borrar la branch que hemos creado anteriormente(tienes que estar fuera de la branch que quieres borrar porque dará error). \n",
     " \n",
-    "git branch -d nombre-de-tu-branch\n",
-    "  "
+    "**git branch -d nombre-de-tu-branch**\n",
+    "\n",
+    "![borrar_branch](../img/borrar_branch.png)  \n",
+    "\n",
+    "- Con el siguiente comando podremos publicar la branch que hemos creado anteriormente(tienes que estar en la branch que quieres subir). \n",
+    "\n",
+    "**git push origin prueba_1**\n",
+    "\n",
+    "![subir_branch](../img/subir_branch.png)  \n",
+    "\n",
+    "#### Ejemplo:\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![branch_1](../img_2/branch_1.png)"
+    "![ejemplo_branch](../img/ejemplo_branch.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Al finalizar de crear la rama si quieres subir tu rama al repositorio deberás hacer dentro de la rama creada \" git push \" , en caso contrario no se subiran los cambios."
+    "### - ¿Cómo crear una rama con la interface de VSC?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - ¿Como crear una rama con la interface de VSC?"
+    "* En la parte inferior izquierda del VSC podéis encontrar lo siguiente:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En la parte inferior izquierda del VSC podeis encontrar lo siguiente:"
+    "![sele_branch](../img/sele_branch.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![brn_infc_1](../img_2/branch_1_intf.jpg)"
+    "* Al hacer click, en la parte superior se abrirá un panel donde podremos crear una rama, en la misma rama donde estamos o desde otra rama concreta que queramos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Al hacer click, en la parte superior se abrira un panel donde podremos crear una rama, en la misma rama donde estamos o desde otra rama concreta que queramos."
+    "![crear_branch_2_2](../img/crear_branch_2_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![brc_infc_2](../img_2/branch_2_intf.jpg)"
+    "* Una vez creada \"prueba_2\", ya aparecerá para ser seleccionada y poder trabajar."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Una vez creada (en este caso se llama santi_prueba_2, ya aparecerá para ser selccionada y poder trabajar)"
+    "![crear_branch_2_3](../img/crear_branch_2_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![brn_infc_3](../img_2/branch_3_intf.jpg)"
+    "* También desde el menú de “Source Control”, podemos hacer todas las acciones anteriores. En la siguiente imagen ya estamos haciendo el push de la rama a nuestro repositorio haciendo click en \"Publish Branch\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* También desde el menu de Source Control lo podemos hacer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![brn_sc_1](../img_2/branch_1_int_sc.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* En la siguiente imagen ya estamos haciendo el push de la rama a nuestro repositorio haciendo click en \"Publish Branch\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![brnc_sc_2](../img_2/branch_2_int_sc.png)"
+    "![menu_branch](../img/menu_branch.png)"
    ]
   },
   {
@@ -556,7 +551,7 @@
    "metadata": {},
    "source": [
     "<a id=\"6\"></a> <br>\n",
-    "#### - Juntar ramas y actualizar cambios\n",
+    "## - Juntar ramas y actualizar cambios\n",
     "- Una vez realizado el desarrollo de tu parte del proyecto en tu rama, queda fusionar la rama con la rama padre (dev o main), tienes que estar en esa rama para poder fusionar los archivos con tu rama."
    ]
   },
