commit rama prueba_2

--- a/Teoria/Jupiter_prueba.ipynb
+++ b/Teoria/Jupiter_prueba.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Texto añadido desde la rama Main"
+    "Texto añadido desde la rama prueba_1."
    ]
   }
  ],
