--- a/Teoria/Manual_GitHub.ipynb
+++ b/Teoria/Manual_GitHub.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Taller de GitHub** "
+    "# **Manual de GitHub** "
    ]
   },
   {
@@ -559,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![merge_1](../img_2/merge_1.png)"
+    "![merge_1](../img/merge_branch.png)"
    ]
   },
   {
@@ -573,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![merge_2](../img_2/merge_2.png)"
+    "![merge_2](../img/merge_branch_2.png)"
    ]
   },
   {
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![merge_3](../img_2/conflictos%20merge.png)"
+    "![merge_3](../img/merge_conflict.png)"
    ]
   },
   {
@@ -616,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![merge_4](../img_2/conflictos%20merge_2.png)"
+    "![merge_error](../img/merge_error.png)"
    ]
   },
   {
@@ -637,41 +637,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Resolveremos los conflictos y nos dispondremos a hacer el commit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![merge_5](../img_2/conflictos%20merge_4.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Sincronizamos los cambios y clickamos mas tarde \"OK\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![merge_5](../img_2/conflictos%20merge_5.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![merge_5](../img_2/conflictos%20merge_6.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "[Volver al indice](#0)"
    ]
   },
@@ -680,7 +645,7 @@
    "metadata": {},
    "source": [
     "<a id=\"65\"></a> <br>\n",
-    "#### - Pull Request, ¿que es y para que sirve?"
+    "## - Pull Request, ¿que es y para que sirve?"
    ]
   },
   {
@@ -701,7 +666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pull_1](../img_2/pull_request_1.png)\n"
+    "![pull_1](../img/branch.png)\n"
    ]
   },
   {
@@ -843,9 +808,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Toda la información relativa a la practica grupal la teneis en el siguiente [enlace](https://github.com/svalencia-romero/taller_git_thebridge_09_23/blob/main/Practica/Ejercicio_practico.pdf)."
-   ]
+   "source": []
   }
  ],
  "metadata": {
