--- a/Teoria/Manual_GitHub.ipynb
+++ b/Teoria/Manual_GitHub.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![banner](../img/banner.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Manual de GitHub** "
    ]
   },
@@ -356,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![add_infc_1](../img_2/add_1_ejemplo_infc.png)"
+    "![add_infc_1](../img/add_1_ejemplo_infc.png)"
    ]
   },
   {
@@ -370,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![add_infc_2](../img_2/add_2_ejemplo_infc.png)"
+    "![add_infc_2](../img/add_2_ejemplo_infc.png)"
    ]
   },
   {
@@ -406,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![branch_git](../img_2/git_branch_merge_1.png)"
+    "![branch_git](../img/git_branch_merge_1.png)"
    ]
   },
   {
@@ -536,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![brnc_sc_3](../img_2/branch_3_int_sc.png)"
+    "![brnc_sc_3](../img/branch_3_int_sc.png)"
    ]
   },
   {
@@ -630,7 +637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![merge_5](../img_2/conflictos%20merge_3.png)"
+    "![merge_5](../img/conflictos%20merge_3.png)"
    ]
   },
   {
@@ -673,35 +680,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pull_1_1](../img_2/pull_request_1_1.png)"
+    "![pull_1_1](../img/pull_request_1_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pull_1_1](../img_2/pull_request_2.png)"
+    "![pull_1_1](../img/pull_request_2.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pull_1_1](../img_2/pull_request_2_1.png)"
+    "![pull_1_1](../img/pull_request_2_1.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pull_1_1](../img_2/pull_request_3.png)"
+    "![pull_1_1](../img/pull_request_3.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pull_1_1](../img_2/pull_request_4.png)"
+    "![pull_1_1](../img/pull_request_4.png)"
    ]
   },
   {
@@ -716,7 +723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![pull_1_1](../img_2/pull_request_5.png)"
+    "![pull_1_1](../img/pull_request_5.png)"
    ]
   },
   {
@@ -804,11 +811,6 @@
     "\n",
     "**git revert el-código-de-commit-que-quieres-deshacer**"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
