--- a/Practica/montañas.ipynb
+++ b/Practica/montañas.ipynb
@@ -1686,13 +1686,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nombres_1 = []\n",
-    "\n",
-    "for row in table_1.find_all('tr'):\n",
-    "    celdas = row.find_all('td')\n",
-    "    if len(celdas) > 1:\n",
-    "        link = celdas[1].find('a')\n",
-    "        nombres_1.append(link.get_text())"
+    "def extraer_nombres(table):\n",
+    "    nombres_1 = []\n",
+    "    for row in table_1.find_all('tr'):\n",
+    "        celdas = row.find_all('td')\n",
+    "        if len(celdas) > 1:\n",
+    "            link = celdas[1].find('a')\n",
+    "            nombres_1.append(link.get_text())\n",
+    "    return nombres_1"
    ]
   },
   {
@@ -1742,9 +1743,7 @@
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "alturas_1 = []"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1752,13 +1751,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for row in table_1.find_all('tr'):\n",
-    "    cells = row.find_all('td')\n",
-    "    if len(cells) > 2:\n",
-    "        texto = cells[2].get_text(strip=True)\n",
-    "        altura = re.findall(r'\\d+', texto)\n",
-    "        if altura:\n",
-    "            alturas_1.append(altura[0])\n"
+    "def extraer_alturas(table):\n",
+    "    alturas_1 = []\n",
+    "    for row in table_1.find_all('tr'):\n",
+    "        cells = row.find_all('td')\n",
+    "        if len(cells) > 2:\n",
+    "            texto = cells[2].get_text(strip=True)\n",
+    "            altura = re.findall(r'\\d+', texto)\n",
+    "            if altura:\n",
+    "                alturas_1.append(altura[0])\n",
+    "    return alturas_1\n"
    ]
   },
   {
